--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <div id="row10col8"><h5 id="r10c8" data-index = 0>⚫️</h5></div>
                 <div id="row10col9"><h5 id="r10c9" data-index = 0>⚫️</h5></div>
                 <div id="row11col1"><h2>CODE</h2></div>
-                <div id="row11col2"><h5 id="code1" data-index="0">⚫️</h5></div>
+                <div id="row11col2"><h5 id="code1" data-index = 0>⚫️</h5></div>
                 <div id="row11col3"><h5 id="code2" data-index = 0>⚫️</h5></div>
                 <div id="row11col4"><h5 id="code3" data-index = 0>⚫️</h5></div>
                 <div id="row11col5"><h5 id="code4" data-index = 0>⚫️</h5></div>
@@ -114,9 +114,9 @@
         <div id="instructions">
             <div>
                 <h1>Instructions</h1>
-                    <p>Player One will set a code of four colored (red, blue, green, yellow) pegs in the CODE line by clicking on the black circles and selecting a color.  Once they have the code they want they will click submit to hide their code.  Player Two then has ten turns to guess the code. Player Two will guess by clicking on the first four black circles to select their colors and then click submit.  After each guess from Player Two, Player One will click on the last four circles and display a white peg if they have a correct color but in the wrong location, a brown peg if they have a correct color in the correct place, or a black peg if a peg is not correct and then click submit.</p>
+                    <p>Player One will set a code of four colored (red, blue, green, yellow) pegs in the CODE line by clicking on the black circles and selecting a color.  Once they have the code they want they will click the Hide button to hide their code.  Player Two then has ten turns to guess the code. Player Two will guess by clicking on the first four black circles to select their colors and then click submit.  After each guess from Player Two, Player One will click on the last four circles and display a white peg if they have a correct color but in the wrong location, a brown peg if they have a correct color in the correct place, or a black peg if a peg is not correct and then click submit.</p>
             </div>
-            <h3 id="message"></p>
+            <h3 id="message"></h3>
         </div>
     <script src="./script.js"></script>
 </body>
