Fixed win sound.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
             <h3 id="message"></h3>
         </div>
-    <audio id="WinSound" src="./sounds/WinSound.mp3"></audio>
+    <audio id="WinSound" src="./Sounds/WinSound.mp3"></audio>
     <script src="./script.js"></script>
 </body>
 </html>
