Working on mastermind

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                 <div id="row10col8"><h5 id="r10c8" data-index = 0>⚫️</h5></div>
                 <div id="row10col9"><h5 id="r10c9" data-index = 0>⚫️</h5></div>
                 <div id="row11col1"><h2>CODE</h2></div>
+                <div></div>
                 <div id="row11col2"><h5 id="code1" data-index = 0>⚫️</h5></div>
                 <div id="row11col3"><h5 id="code2" data-index = 0>⚫️</h5></div>
                 <div id="row11col4"><h5 id="code3" data-index = 0>⚫️</h5></div>
